# rsomics-vcf-sort

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: unsorted.vcf
